assets/styles/main.less
@import (inline) "../../node_modules/materialize-css/bin/materialize.css";
@import "landing.less";

html body {
	overflow-x: hidden;
	line-height: normal;
	box-sizing:content-box;
}
nav {
	padding:3px;
}
.container h2 {
	text-align: center;
}
#sortable {
	margin:0;
}
.col {
    h2 {
    	font-size: 20px;
    	margin:0;
    }
    a {
    	display: block;
    	margin-bottom:10px;
    }
}
li .card.small {
	height:110px;

    .card-image {
    	height:80px;
    }

    .card-image span {
    	padding: 20px 20px 2px 17px;
    }

    .card-content {
    	height:30px;
    	padding:9px;
    }

    .card-image img {
    	object-fit: cover;
    	 height:80px;
    }
}
#tool-box {
    a {
        margin-top:22px;
    }
}
.parallax-container {
	width:100vw;
}
/*.col .fixed-action-btn ul {
	left:9px;
} */

